package com.trabalhopm.backend.pacote;

public interface Servico {
    String getDescricao();
    double getPreco();
}
