@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundCorner 8
skinparam class {
  BackgroundColor White
  BorderColor #34495E
  ArrowColor #34495E
}
title Sprint 4: Padrões de Projeto (Strategy, Singleton e Decorator)

interface Tarifa {
  +getNome() : String
  +aplicar(valor) : double
}
class TarifaNormal
class TarifaAltaTemporada
class TarifaBaixaTemporada
class TarifaFeriado
class TarifaEventoEspecial
class TarifaPromocional

Tarifa <|.. TarifaNormal
Tarifa <|.. TarifaAltaTemporada
Tarifa <|.. TarifaBaixaTemporada
Tarifa <|.. TarifaFeriado
Tarifa <|.. TarifaEventoEspecial
Tarifa <|.. TarifaPromocional

class GerenciadorTarifas {
  -instancia : GerenciadorTarifas
  -tarifaAtiva : Tarifa
  +getInstance() : GerenciadorTarifas
  +getTarifaAtiva() : Tarifa
  +definirTarifaAtiva(nome)
}
GerenciadorTarifas o--> "1" Tarifa : tarifaAtiva

interface Servico {
  +getDescricao() : String
  +getPreco() : double
}
class Hospedagem
abstract class ServicoAdicional {
  #servico : Servico
}
class CafeDaManha
class PasseioTuristico
class Transporte
class Lavanderia
class Traslado

Servico <|.. Hospedagem
Servico <|.. ServicoAdicional
ServicoAdicional o--> "1" Servico : envolve
ServicoAdicional <|-- CafeDaManha
ServicoAdicional <|-- PasseioTuristico
ServicoAdicional <|-- Transporte
ServicoAdicional <|-- Lavanderia
ServicoAdicional <|-- Traslado

class AluguelService
class Quarto
class PacoteService

AluguelService ..> GerenciadorTarifas : consulta tarifa ativa
AluguelService ..> Quarto : calcularDiaria
PacoteService ..> Servico : monta o pacote

note bottom of GerenciadorTarifas
  Singleton: uma única instância
  guarda a tarifa ativa do sistema
end note

note bottom of ServicoAdicional
  Decorator: cada serviço adicional
  envolve outro Serviço e soma o preço
end note

@enduml
